...
            NotificationCenter.default.removeObserver(resignActiveObserver)
        }
    }

    func toggle(_ menuID: UUID) {
        if openMenuID == menuID {
            close(menuID)
        } else {
            openMenuID = menuID
            startMonitoringClicks()
        }
    }

...
